--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 <form action="/action_page.php">
   First name:<br>
-  <input type="text" name="ricaux" value="Mickey">
+  <input type="text" name="firstname" value="Julien">
   <br>
   Last name:<br>
-  <input type="text" name="julien" value="Mouse">
+  <input type="text" name="lastname" value="Ricaux">
   <br><br>
   <input type="submit" value="Submit">
 </form> 
